# bittensor-subnet

./: .env.example  .gitignore  README.md  chronoseek_chute.example.py  docker-compose.yml  miner.py  pyproject.toml  validator.py
chronoseek/: __init__.py  config.py  epistula.py  protocol_models.py  schemas.py  scoring.py
chronoseek/api/: __init__.py
chronoseek/chain/: __init__.py  submissions.py
chronoseek/chutes/: __init__.py  deployment.py  runtime.py
chronoseek/miner/: __init__.py  auth.py  logic.py  runtime.py
chronoseek/miner/utils/: __init__.py  audio_extractor.py  clip_engine.py  frame_extractor.py  transcript_engine.py  video_downloader.py
chronoseek/validator/: __init__.py  base_task_gen.py  forward.py  gateway.py  state.py  submissions.py  task_gen.py  video_availability.py
docs/: BUSINESS_LOGIC.md  CHRONOSEEK_V2_DESA.md  CHRONOSEEK_V2_EVAL_SERVE_SPLIT.md  DESIGN.md  PROBLEM_STATEMENT.md
knowledge/: INDEX.yaml  miner.contract.yaml  miner.rules.yaml  subnet.invariants.yaml  validator.contract.yaml
protocol_artifacts/: protocol-error.schema.json  video-search-request.schema.json  video-search-response.schema.json
scripts/: commit_v2_submission.py  deploy_chutes_runtime.py  test_chutes_runtime_local.py  test_miner_search.py  verify_mvp.py
tests/: test_chain_interaction.py  test_chutes_flow.py  test_miner_audio.py  test_miner_auth.py  test_miner_runtime.py  test_protocol_compat.py  test_scoring.py  test_task_gen.py  test_validator_flow.py  test_validator_gateway.py  test_validator_submissions.py  test_video_downloader.py  verify_mvp.py
(+2 files in other folders)
